--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,6 @@ name: Build Docker and Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 # Set permissions for GitHub Pages deployment
@@ -19,8 +17,11 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
     - name: Checkout repository
@@ -28,10 +29,6 @@ jobs:
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    
-    - name: Build Docker image
-      run: |
-        docker build -t my-app .
     
     - name: Build Docker image and extract Vite build artifacts
       run: |
@@ -45,21 +42,18 @@ jobs:
         docker create --name temp-container my-app-builder
         docker cp temp-container:/app/dist/. ./dist/
         docker rm temp-container
+        
+        # List files to verify build
+        ls -la ./dist/
+    
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
     
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: ./dist
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/main'
     
-    steps:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
